--- a/GeoDoorServer3/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/GeoDoorServer3/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Forgot your password?";
 }
 
-<h1>@ViewData["Title"]</h1>
+@*<h1>@ViewData["Title"]</h1>
 <h4>Enter your email.</h4>
 <hr />
 <div class="row">
@@ -16,10 +16,10 @@
                 <input asp-for="Input.Email" class="form-control" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-dark">Submit</button>
         </form>
     </div>
-</div>
+</div>*@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
