--- a/GeoDoorServer3/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/GeoDoorServer3/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -7,7 +7,7 @@
 
 <h4>@ViewData["Title"]</h4>
 
-<div class="row">
+@*<div class="row">
     <div class="col-md-6">
         <p>Your account contains personal data that you have given us. This page allows you to download or delete that data.</p>
         <p>
@@ -20,7 +20,7 @@
             <a id="delete" asp-page="DeletePersonalData" class="btn btn-primary">Delete</a>
         </p>
     </div>
-</div>
+</div>*@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
