--- a/GeoDoorServer3/Areas/Identity/Pages/Account/Manage/TwoFactorAuthentication.cshtml
+++ b/GeoDoorServer3/Areas/Identity/Pages/Account/Manage/TwoFactorAuthentication.cshtml
@@ -5,7 +5,7 @@
     ViewData["ActivePage"] = ManageNavPages.TwoFactorAuthentication;
 }
 
-<partial name="_StatusMessage" for="StatusMessage" />
+@*<partial name="_StatusMessage" for="StatusMessage" />
 <h4>@ViewData["Title"]</h4>
 @if (Model.Is2faEnabled)
 {
@@ -50,7 +50,7 @@ else
 {
     <a id="enable-authenticator" asp-page="./EnableAuthenticator" class="btn btn-primary">Setup authenticator app</a>
     <a id="reset-authenticator" asp-page="./ResetAuthenticator" class="btn btn-primary">Reset authenticator app</a>
-}
+}*@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
