* Finished Basic CRUD intergation for the user libarary

--- a/GeoDoorServer3/Views/Shared/_Layout.cshtml
+++ b/GeoDoorServer3/Views/Shared/_Layout.cshtml
@@ -32,9 +32,6 @@
                     <partial name="_LoginPartial" />
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         @if (SignInManager.IsSignedIn(User))
@@ -64,6 +61,13 @@
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
+        <script type="text/javascript">
+            function timedRefresh(timeoutPeriod) {
+                setTimeout(function() {
+                    location.reload(true);
+                }, timeoutPeriod);
+            }
+        </script>
     </environment>
     <environment exclude="Development">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"
