--- a/GeoDoorServer3/Views/Users/Edit.cshtml
+++ b/GeoDoorServer3/Views/Users/Edit.cshtml
@@ -1,13 +1,14 @@
-﻿@model GeoDoorServer3.Models.DataModels.User
+﻿@using GeoDoorServer3.Models.DataModels
+@model GeoDoorServer3.Models.DataModels.User
 
 @{
     ViewData["Title"] = "Edit";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Edit</h1>
+<h1 class="h1 text-primary">Edit</h1>
 
-<h4>User</h4>
+<h4 class="h4">User: @Model.Name</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -16,7 +17,7 @@
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="PhoneId" class="control-label"></label>
-                <input asp-for="PhoneId" class="form-control" />
+                <input asp-for="PhoneId" class="form-control" disabled />
                 <span asp-validation-for="PhoneId" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -26,23 +27,15 @@
             </div>
             <div class="form-group">
                 <label asp-for="AccessRights" class="control-label"></label>
-                <select asp-for="AccessRights" class="form-control"></select>
+                <select asp-for="AccessRights" class="form-control" asp-items="Html.GetEnumSelectList<AccessRights>()"></select>
                 <span asp-validation-for="AccessRights" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="LastConnection" class="control-label"></label>
-                <input asp-for="LastConnection" class="form-control" />
-                <span asp-validation-for="LastConnection" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
+                <a asp-action="Index"><button type="button" class="btn btn-dark">Back to List</button></a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
