--- a/GeoDoorServer3/Views/Users/Create.cshtml
+++ b/GeoDoorServer3/Views/Users/Create.cshtml
@@ -1,13 +1,13 @@
-﻿@model GeoDoorServer3.Models.DataModels.User
+﻿@using GeoDoorServer3.Models.DataModels
+@model GeoDoorServer3.Models.DataModels.User
 
 @{
     ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Create</h1>
+<h1 class="h1 text-primary">Create User</h1>
 
-<h4>User</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -25,23 +25,20 @@
             </div>
             <div class="form-group">
                 <label asp-for="AccessRights" class="control-label"></label>
-                <select asp-for="AccessRights" class="form-control"></select>
+                <select asp-for="AccessRights" class="form-control" asp-items="Html.GetEnumSelectList<AccessRights>()"></select>
                 <span asp-validation-for="AccessRights" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="LastConnection" class="control-label"></label>
-                <input asp-for="LastConnection" class="form-control" />
+                <input type="datetime-local" asp-for="LastConnection" class="form-control" />
                 <span asp-validation-for="LastConnection" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
+                <a asp-action="Index"><button type="button" class="btn btn-dark">Back to List</button></a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
