--- a/GeoDoorServer3/Views/Users/Delete.cshtml
+++ b/GeoDoorServer3/Views/Users/Delete.cshtml
@@ -5,11 +5,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Delete</h1>
+<h1 class="h1 text-primary">Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h4 class="h4">Are you sure you want to delete @Model.Name?</h4>
 <div>
-    <h4>User</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -40,7 +39,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger" />
+        <a asp-action="Index"><button type="button" class="btn btn-dark">Back to List</button></a>
     </form>
 </div>
