--- a/GeoDoorServer3/Views/Users/Details.cshtml
+++ b/GeoDoorServer3/Views/Users/Details.cshtml
@@ -5,10 +5,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Details</h1>
+<h1 class="h1 text-primary">Details</h1>
 
 <div>
-    <h4>User</h4>
+    <h4 class="h4">User: @Model.Name</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -38,6 +38,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.Id"><button class="btn btn-primary">Edit</button></a>
+    <a asp-action="Index"><button class="btn btn-dark">Back to List</button></a>
 </div>
