--- a/GeoDoorServer3/Views/Users/Index.cshtml
+++ b/GeoDoorServer3/Views/Users/Index.cshtml
@@ -5,13 +5,13 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
-
+<h1 class="h1 text-primary">User Table</h1>
+<h4 class="h4">Saved User: @Model.Count()</h4>
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create"><button class="btn btn-dark">Create New</button></a>
 </p>
-<table class="table">
-    <thead>
+<table class="table table-striped table-hover table-responsive-sm">
+    <thead class="thead-dark">
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.PhoneId)
@@ -44,9 +44,9 @@
                 @Html.DisplayFor(modelItem => item.LastConnection)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id"><button class="btn btn-primary">Edit</button></a>
+                <a asp-action="Details" asp-route-id="@item.Id"><button class="btn btn-dark">Details</button></a>
+                <a asp-action="Delete" asp-route-id="@item.Id"><button class="btn btn-danger">Delete</button></a>
             </td>
         </tr>
 }
