--- a/GeoDoorServer3/Views/Home/Index.cshtml
+++ b/GeoDoorServer3/Views/Home/Index.cshtml
@@ -1,8 +1,11 @@
-﻿@{
+﻿@model GeoDoorServer3.Controllers.HomeController.DataModel
+@{
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+    <div class="text-center">
+        <h1 class="display-4">@Html.DisplayFor(modelItem => modelItem.OpenHabStatus.GateStatus)</h1>
+        <h1 class="display-4">@Html.DisplayFor(modelItem => modelItem.OnlineTime)</h1>
+        <h1 class="display-4">@Html.DisplayFor(modelItem => modelItem.OpenHabStatus.StartTime)</h1>
+        <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    </div>
