--- a/GeoDoorServer3/Views/Shared/_CookieConsentPartial.cshtml
+++ b/GeoDoorServer3/Views/Shared/_CookieConsentPartial.cshtml
@@ -9,7 +9,8 @@
 @if (showBanner)
 {
     <div id="cookieConsent" class="alert alert-info alert-dismissible fade show" role="alert">
-        Use this space to summarize your privacy and cookie use policy. <a asp-area="" asp-controller="Home" asp-action="Privacy">Learn More</a>.
+        We use cookies to improve your experience.  If you do not accept the optional cookies, your experience may be affected.
+        If you want to know more, please read the <a asp-area="" asp-controller="Home" asp-action="Privacy">privacy notice</a>.
         <button type="button" class="accept-policy close" data-dismiss="alert" aria-label="Close" data-cookie-string="@cookieString">
             <span aria-hidden="true">Accept</span>
         </button>
