--- a/GeoDoorServer3/Areas/Identity/Pages/Account/Register.cshtml
+++ b/GeoDoorServer3/Areas/Identity/Pages/Account/Register.cshtml
@@ -6,12 +6,17 @@
 
 <h1>@ViewData["Title"]</h1>
 
-@*<div class="row">
+<div class="row justify-content-center">
     <div class="col-md-4">
         <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
             <h4>Create a new account.</h4>
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="Input.UserName"></label>
+                <input asp-for="Input.UserName" class="form-control" />
+                <span asp-validation-for="Input.UserName" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="Input.Email"></label>
                 <input asp-for="Input.Email" class="form-control" />
@@ -30,7 +35,7 @@
             <button type="submit" class="btn btn-primary">Register</button>
         </form>
     </div>
-</div>*@
+</div>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
