--- a/GeoDoorServer3/Views/Shared/_LoginPartial.cshtml
+++ b/GeoDoorServer3/Views/Shared/_LoginPartial.cshtml
@@ -16,9 +16,12 @@
 }
 else
 {
-    @*<li class="nav-item">
-        <a class="nav-link text-dark" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
-    </li>*@
+    if (UserManager.Users.Count() < 1)
+    {
+        <li class="nav-item">
+            <a class="nav-link" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
+        </li>
+    }
     <li class="nav-item">
         <a class="nav-link" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
     </li>
