* Added Tab icons for all Browser Types * Added SettingsController.cs and Settings.cs * Updated Packages and Entity Framework * Finished implementing Settings in the database * Added Standard Settings values in Program.cs

--- a/GeoDoorServer3/Views/Shared/_Layout.cshtml
+++ b/GeoDoorServer3/Views/Shared/_Layout.cshtml
@@ -18,6 +18,7 @@
               integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" />
     </environment>
     <link rel="stylesheet" href="~/css/site.css" />
+    @Html.Partial("_Favicons")
 </head>
 <body>
     <header>
@@ -35,6 +36,9 @@
                         {
                             <li class="nav-item">
                                 <a class="nav-link" asp-area="" asp-controller="Users" asp-action="Index">Users</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="" asp-controller="Settings" asp-action="Index">Settings</a>
                             </li>
                         }
                         <li class="nav-item">
