* Added icon * Started to work on the About.cshtml * Fixed missing IsAuthenticated

--- a/GeoDoorServer3/Views/Home/About.cshtml
+++ b/GeoDoorServer3/Views/Home/About.cshtml
@@ -5,3 +5,8 @@
 
 <h1>About</h1>
 
+<div class="text-center">
+    <h1 class="h1" style="font-size: 60px">Geo<span style="color: #4878C0">Door</span> Server</h1>
+    <p>Welcome to the Geo<span style="color: #4878c0">Door</span> User Management platform.</p>
+            <img src="~/images/home/GeoDoor.svg" alt="GeoDoor" height="200px" style="margin-top: 30px"/>
+</div>
